Version 2024.xxxxx (xxxxx 2024)
- Implemented: Domoticz Remote Server, added better error message if remote domoticz device could not be created because accepting new devices is disabled under settings
- Fixed: Alert sensor notification
- Fixed: Scripts/Lua/Blockly, setting a setPoint

Version 2024.2 (January 15th 2024)
- Implemented: Compare chart for most sensor types
- Implemented: Email, Splitting mime attachments over multiple lines
- Implemented: Notifications, Option to enable/disable
- Implemented: OpenZwave is back.... (No Support)
- Updated: Translations
- Changed: Comparing charts now uses correct Y-Axis label
- Changed: Internal, Last received is now handled differently, should solve possible hardware timeout issues
- Changed: MQTT, QoS is now set to 1 for all messages
- Fixed: MQTT-AD: Fan creation
- Fixed: Timer Plans, now also duplicates scenes

Version 2024.1 (January 1th 2024)
- Implemented: AlfenEve, added charging indication switch
- Implemented: AlfenEve, added option to specify charge current (or disable this)
- Implemented: AlfenEve, added Solar charging mode and settings
- Implemented: Counter report, now possible to remove data point (via shift click) from month chart
- Implemented: Devices overview, Setpoint log button
- Implemented: Enever, added support for providers Atoom Alliantie, Energie van Ons, Vandebron, Wout Energie
- Implemented: Enever, option to specify different providers for Gas/Electricity
- Implemented: Enever: added two user variables for average gas/electricity price
- Implemented: Enphase, counter helper to prevent turnover caused by powerloss, reboot or other envoy issues
- Implemented: Enphase, Initial support for Encharge battery status (needs more work)
- Implemented: Livesearch, included hardware name and optimized search algorithm to search all entered strings
- Implemented: Managed Counters, now possible to use negative values
- Implemented: Mitsubishi WF RAC Airconditioning