@@ -1,5 +1,6 @@
 Version 2024.xxxxx (xxxxx 2024)
 - Implemented: Domoticz Remote Server, added better error message if remote domoticz device could not be created because accepting new devices is disabled under settings
+- Implemented: InfluxDB Data push, add error message when return status code is forbidden
 - Fixed: Alert sensor notification
 - Fixed: Scripts/Lua/Blockly, setting a setPoint
 
